@@ -1,34 +1,26 @@
 package tech.group15.thriftharbour.service.implementation;
 
+import java.util.ArrayList;
+import java.util.Date;
+import java.util.List;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 import software.amazon.awssdk.http.HttpStatusCode;
-import tech.group15.thriftharbour.dto.AuctionSaleListingCreationResponse;
-import tech.group15.thriftharbour.dto.GetListingImageResponse;
-import tech.group15.thriftharbour.dto.ImmediateSaleListingCreationResponse;
-import tech.group15.thriftharbour.dto.SubmitListingRequest;
+import tech.group15.thriftharbour.dto.*;
 import tech.group15.thriftharbour.exception.ImageUploadException;
-import tech.group15.thriftharbour.model.AuctionSaleImage;
-import tech.group15.thriftharbour.model.AuctionSaleListing;
-import tech.group15.thriftharbour.model.ImmediateSaleImage;
-import tech.group15.thriftharbour.model.ImmediateSaleListing;
-import tech.group15.thriftharbour.repository.AuctionSaleImageRepository;
-import tech.group15.thriftharbour.repository.AuctionSaleListingRepository;
-import tech.group15.thriftharbour.repository.ImmediateSaleImageRepository;
-import tech.group15.thriftharbour.repository.ImmediateSaleListingRepository;
+import tech.group15.thriftharbour.exception.ListingNotFoundException;
+import tech.group15.thriftharbour.mapper.ProductMapper;
+import tech.group15.thriftharbour.model.*;
+import tech.group15.thriftharbour.repository.*;
 import tech.group15.thriftharbour.service.AwsS3Service;
 import tech.group15.thriftharbour.service.JWTService;
 import tech.group15.thriftharbour.service.ProductListingService;
 import tech.group15.thriftharbour.utils.DateUtil;
 import tech.group15.thriftharbour.utils.FileUtils;
 import tech.group15.thriftharbour.utils.UUIDUtil;
-
-import java.util.ArrayList;
-import java.util.Date;
-import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -45,6 +37,8 @@ public class ProductListingServiceImpl implements ProductListingService {
     private final AuctionSaleListingRepository auctionSaleListingRepository;
 
     private final AuctionSaleImageRepository auctionSaleImageRepository;
+
+    private final UserRepository userRepository;
 
     @Value("${aws.bucketName}")
     private String bucketName;
@@ -64,10 +58,17 @@ public class ProductListingServiceImpl implements ProductListingService {
     }
 
 
+
     // Method to create an immediate sale listing
     @Override
-    public ImmediateSaleListingCreationResponse CreateImmediateSaleListing(String authorizationHeader, SubmitListingRequest listingRequest, List<MultipartFile> images) {
+    public ImmediateSaleListingCreationResponse createImmediateSaleListing(String authorizationHeader, SubmitListingRequest listingRequest, List<MultipartFile> images) {
         String userName = jwtService.extractUserNameFromRequestHeaders(authorizationHeader);
+
+        /* Fetch the User entity based on the seller's email */
+        User seller =
+            userRepository
+                .findByEmail(userName)
+                .orElseThrow(() -> new UsernameNotFoundException("Seller not found!"));
 
         Date createdDate = DateUtil.getCurrentDate();
 
@@ -77,6 +78,7 @@ public class ProductListingServiceImpl implements ProductListingService {
                 .productName(listingRequest.getProductName())
                 .productDescription(listingRequest.getProductDescription())
                 .price(listingRequest.getProductPrice())
+                .seller(seller)
                 .sellerEmail(userName)
                 .category(listingRequest.getProductCategory())
                 .createdDate(createdDate)
@@ -130,7 +132,7 @@ public class ProductListingServiceImpl implements ProductListingService {
     }
 
     @Override
-    public AuctionSaleListingCreationResponse CreateAuctionSaleListing(String authorizationHeader, SubmitListingRequest listingRequest, List<MultipartFile> images) {
+    public AuctionSaleListingCreationResponse createAuctionSaleListing(String authorizationHeader, SubmitListingRequest listingRequest, List<MultipartFile> images) {
         String userName = jwtService.extractUserNameFromRequestHeaders(authorizationHeader);
 
         Date createdDate = DateUtil.getCurrentDate();
@@ -197,6 +199,20 @@ public class ProductListingServiceImpl implements ProductListingService {
 
     }
 
+    /* Get single product for view */
+    @Override
+    public ImmediateSaleListing findImmediateSaleListingByID(String immediateSaleListingID) {
+    return immediateSaleListingRepository
+        .findById(immediateSaleListingID)
+        .orElseThrow(() -> new ListingNotFoundException("Product not found!"));
+    }
+
+    /* Get all product listing for admin */
+    @Override
+    public List<ImmediateSaleMinifiedResponse> findAllImmediateSaleListing() {
+        return ProductMapper.minifiedProductResponse(immediateSaleListingRepository.findAll());
+    }
+
     @Override
     public List<ImmediateSaleListing> findAllImmediateSaleListingBySellerEmail(String authorizationHeader) {
         String sellerEmail = jwtService.extractUserNameFromRequestHeaders(authorizationHeader);
@@ -215,10 +231,10 @@ public class ProductListingServiceImpl implements ProductListingService {
                 .getAllByImmediateSaleListingID(listingID);
         return GetListingImageResponse
                 .builder()
-                .ListingId(listingID)
+                .listingId(listingID)
                 .imageURLs(productImages.stream()
                         .map(ImmediateSaleImage::getImageURL)
-                        .collect(Collectors.toList()))
+                        .toList())
                 .build();
     }
 
@@ -228,11 +244,17 @@ public class ProductListingServiceImpl implements ProductListingService {
                 .findAllByAuctionSaleListingID(listingID);
         return GetListingImageResponse
                 .builder()
-                .ListingId(listingID)
+                .listingId(listingID)
                 .imageURLs(productImages.stream()
                         .map(AuctionSaleImage::getImageURL)
-                        .collect(Collectors.toList()))
+                        .toList())
                 .build();
+    }
+
+    /* Get all product listing from seller id */
+    @Override
+    public List<ImmediateSaleListing> findUserListingById(Integer sellerID) {
+        return immediateSaleListingRepository.findAllBySellerID(sellerID);
     }
 
 
